--- a/index.org
+++ b/index.org
@@ -1,5 +1,6 @@
 #+title: Making of: Circle drawing tutorial
 #+date: <2022-11-28 Mon>
+#+vue: t
 
 People ask me how I write my interactive tutorials. The first few years, I used d3.js, and I wrote [[href:/making-of/line-drawing/][an interactive tutorial about how I made interactive tutorials]]. I now use Vue.js v2, so I'm writing a new interactive tutorial about how I make interactive tutorials with Vue. On this page I'll recreate the first few diagrams of my [[href:/grids/circle-drawing/][circle drawing tutorial]], using [[https://v3.vuejs.org/][Vue.js v2]]. The ideas here will be similar if you use Vue v3 or React or Preact or Lit or Svelte etc.
 
@@ -18,13 +19,11 @@ I usually start with a basic web page template that includes scripts, footers, a
 
 #+begin_export html
 <figure>
-  <a-step src="1/" />
+  <a-step :show-all="true" src="1/" />
 </figure>
 #+end_export
 
 I attach an ~id=~ to an html element so that I can get to it from Javascript. Sometimes I'll attach it to the ~<svg>~ and sometimes to a ~<div>~ or ~<figure>~ outside the svg. For this page, I want interactive elements outside the svg so I'm putting the id on the ~<figure>~.
-
-#+include: "1/index.html" src html
 
 I'll omit the header and footer from the rest of the examples. Click the filename on the upper right to see the entire page up to that point. Using a ~viewBox~ on ~<svg>~ tells it the coordinate system to for drawing. We can use that to keep a consistent coordinate system even if the diagram is resized.
 
@@ -61,11 +60,26 @@ Those of you who know SVG might choose to use =viewBox= or =transform= to change
 #+begin_export html
 <style>
   iframe { width: 100%; }
+
+  figure { line-height: 1.15; } /* not sure what this *should* be */
+
+  /* Prism */
+  .language-html { font-size: 1rem; }
+  .punctuation { color: hsl(0, 10%, 50%); }
+  .doctype-tag, .tag { color: hsl(0, 0%, 30%); font-weight: bold; }
+  .name, .attr-name { color: hsl(300, 30%, 50%); }
+  .attr-value { color: hsl(300, 10%, 50%); font-weight: normal; }
+  .value.language-javascript { color: hsl(200, 30%, 50%); font-family: var(--monospace); font-weight: normal; font-style: italic; }
+
+  .prefix.inserted { color: hsl(150, 50%, 50%); background: hsl(150, 30%, 90%); }
 </style>
 
 <x:footer>
+  <script src="prism.js" data-manual="true"></script>
+  <script src="prism-diff.js"></script>
+  <script src="prism-diff-highlight.js"></script>
   <script type="module" src="making-of-circle-drawing.js"></script>
-  Created 28 Nov 2022; &#160;
-  <!-- hhmts start -->Last modified: 02 Dec 2022<!-- hhmts end -->
+  Created 28 Nov 2022 with Vue.js and Prism.js; &#160;
+  <!-- hhmts start -->Last modified: 05 Dec 2022<!-- hhmts end -->
 </x:footer>
 #+end_export
