--- a/index.org
+++ b/index.org
@@ -75,11 +75,12 @@ Those of you who know SVG might choose to use =viewBox= or =transform= to change
 </style>
 
 <x:footer>
-  <script src="prism.js" data-manual="true"></script>
-  <script src="prism-diff.js"></script>
-  <script src="prism-diff-highlight.js"></script>
   <script type="module" src="making-of-circle-drawing.js"></script>
-  Created 28 Nov 2022 with Vue.js and Prism.js; &#160;
-  <!-- hhmts start -->Last modified: 05 Dec 2022<!-- hhmts end -->
+  Created 28 Nov 2022 
+  with <a href="https://v2.vuejs.org/">Vue.js</a> 
+  and <a href="https://prismjs.com/">Prism.js</a> 
+  and <a href="https://www.npmjs.com/package/diff-sequences">Diff-Sequences</a>
+  ; &#160;
+  <!-- hhmts start -->Last modified: 07 Dec 2022<!-- hhmts end -->
 </x:footer>
 #+end_export
